# ferite

./: .gitignore  ABOUT  AUTHORS  ChangeLog  DEVELOPERS  LICENSE  Makefile.am  README  RELEASE.NOTES  ROADMAP  TODO  WORKING  autogen.sh  config.h.in  configure.ac.stub  farm.yard  ferite-config.in  ferite.m4  ferite.spec.in  udcl.sh
builder/: Makefile.am  builder.h  builder_main.c
builder/example/: .cvsignore  ExampleModule.fec  Makefile.am  example_module_core.c  example_module_foo.c  example_module_header.h
contrib/: README
debian/: changelog  control  copyright  rules  shlibs.local
docs/: Makefile.am  build_api_docs.sh  build_c_api_docs.sh  build_docs.sh  build_html_manual.sh  build_manuals.sh  builder.1  embed.sgml  ferite.1  feritedoc.sgml  manual.sgml  profile.txt
docs/html-manuals/embed/: index.html  style.css
docs/html-manuals/feritedoc/: index.html
docs/html-manuals/manual/: index.html
docs/images/: Makefile.am
docs/misc/: .cvsignore  frame  instruction_set_logic  pdl  variable_accessors
docs/support/: html-customizations.dsl  shared-manual.feh  stylesheet.css  website-customisations.dsl
include/: Makefile.am  ferite.h
include/ferite/: Makefile.am  famt.h  farray.h  fbuffer.h  fcache.h  fcompile.h  fcontainer.h  fdebug.h  ferror.h  ffunction.h  fgc.h  fglobals.h  fhash.h  fmem.h  fmem_jedi.h  fmem_libgc.h  fmodule.h  fns.h  fobj.h  foop.h  fopcode.h  fops.h  fparser.h  fprofile.h  fregex.h  freq.h  fstack.h  fstring.h  fstructs.h  fthread.h  futils.h  fvariables.h
libs/: Makefile.am
modules/: Makefile.am  Makefile.am.stub  build_modules.sh
modules/array/: Makefile.am  array.fec  array.xml  config.m4  util.c  util.h
modules/console/: Makefile.am  config.m4  console.fec  console.xml
modules/date/: Makefile.am  config.m4  date.fec  date.xml  strptime.c  util_date.c  util_date.h
modules/filesystem/: Makefile.am  config.m4  consts.h  consts.txt  filesystem.fec  filesystem.xml
modules/ipc/: Makefile.am  config.m4  ipc.fec  ipc.xml
modules/math/: Makefile.am  complex.fec  config.m4  math.fec  math.xml
modules/network/: Makefile.am  config.m4  network.fec  network.xml  util_network.c  util_network.h
modules/number/: Makefile.am  config.m4  number.fec  number.xml
modules/posix/: Makefile.am  config.m4  consts.h  consts.sh  consts.txt  posix.fec  posix.xml  posix_consts.fec  util_posix.c  util_posix.h  util_signal.c  util_signal.h  util_user.c  util_user.h
modules/reflection/: Makefile.am  config.m4  reflection.fec  reflection.xml  utility.c
modules/regexp/: Makefile.am  config.m4  regexp.fec  regexp.xml
modules/rmi/: Makefile.am  makefiles  rmi.fe  rmi.xml
modules/rmi/rmi/: Makefile.am  RMILocalVariable.fe  RMIProtocolLayer.fe  RMIRemoteObject.fe  RMITranslationLayer.fe  RMITransportLayer.fe
modules/rmi/rmi/protocol/: Makefile.am  std.fe
modules/rmi/rmi/translation/: Makefile.am  std.fe
modules/rmi/rmi/transport/: Makefile.am  debug.fe  tcpip.fe
modules/serialize/: Makefile.am  config.m4  serialize-xml.feh  serialize.fec  serialize.xml  utility.c  utility.h
modules/stream/: Makefile.am  config.m4  stream.fec  stream.xml  util_stream.c  util_stream.h
modules/string/: Makefile.am  config.m4  string.fec  string.xml
modules/sys/: Makefile.am  config.m4  env.fec  std.fec  sys.fec  sys.xml
modules/test/: Makefile.am  config.m4  test.fec  test.xml  utility.c  utility.h
modules/thread/: Makefile.am  config.m4  thread.fec  thread.xml  utility.c
modules/unix/: Makefile.am  config.m4  consts.h  consts.txt  syslog.fec  unix.fec  unix.xml  unixsocket.fec
modules/xml/: Makefile.am  config.m4  sax_handlers.c  sax_handlers.h  test.fe  test.xml  tree_handlers.c  tree_handlers.h  xml.fec  xml.xml  xpath_handlers.c  xpath_handlers.h
scripts/: GetOptLong.fe  Makefile.am  freezethaw.fe  misc.xml  twitter.feh
scripts/benchmarks/: ackermann.fe  ary.fe  ary2.fe  ary3.fe  fib.fe  hash.fe  nestedloop.fe  prodcons.fe  random.fe  strcat.fe
scripts/cgi/: Makefile.am  cgi.fe  cookies.fe  template.fe
scripts/config/: Makefile.am  makeconfig.fe
scripts/test/: Makefile.am  accessors.fe  alias.fe  array_as_fake_object.fe  array_in_script.fe  attrreturn.fe  autoload.fe  bofh.fe  byref.fe  class.fe  closure.fe  closure_class.fe  closure_examples.fe  closure_foreach.fe  closure_params.fe  closure_private.fe  cls_ex_ns_cls.fe  complex.fe  directives.fe  dot_self.fe  error.fe  error_in_function.fe  error_with_arg.fe  escape.fe  expansion.fe  fail_uses.fe  foreach.fe  foreach2.fe  helloworld.fe  huge_but_small.fe  implements.fe  initialisers_non_function.fe  ipc_test.fe  logical.fe  loop.fe  mem.fe  method_overloading.fe  multi_mods.fe  namespace.fe  native_inheiritance.fe  (+34 more)
scripts/test-suite/: Makefile.am  README  array.fe  console.fe  date.fe  filesystem.fe  ipc.fe  math.fe  network.fe  number.fe  posix.fe  reflection.fe  regexp.fe  rmi.fe  serialize.fe  stream.fe  string.fe  sys.fe  thread.fe  unix.fe  xml.fe
scripts/test/rmi/: Makefile.am  server.fe  test.fe
scripts/xmlrpc/: Makefile.am  xmlrpc.fe
src/: Makefile.am  buildcompiler  buildparser  buildscanner  ferite.c  ferite_amt.c  ferite_amtarray.c  ferite_buffer.c  ferite_cache.c  ferite_class.c  ferite_compile.c  ferite_error.c  ferite_execute.c  ferite_function.c  ferite_gc.c  ferite_gc_generation.c  ferite_gc_libgc.c  ferite_globals.c  ferite_hash.c  ferite_mem_classic.c  ferite_mem_jedi.c  ferite_mem_libgc.c  ferite_module.c  ferite_namespace.c  ferite_obj.c  ferite_opcode.c  ferite_ops.c  ferite_parser.c  ferite_parser.y  ferite_profile.c  ferite_regex.c  ferite_scanner.c  ferite_scanner.l  ferite_script.c  ferite_stack.c  ferite_string.c  ferite_thread.c  ferite_uarray.c  ferite_utils.c  ferite_variables.c
test/: .gitignore  Makefile.am  MakefileTest.am.stub  README.tdd  bootstrap.sh  cache-ferite.c  dot.c  dot.h  ferite_amt-array.c  ferite_amt-hash-delete.c  ferite_amt-hash-gen.c  ferite_amt-hash-set-and-get.c  ferite_amt-index-from-hash-and-string.c  ferite_amt-index-from-hash.c  main.c  main_script.c  miniferite.c  tap.c  tap.h  test_amt.c  test_amt.h  testjedi.c
(+111 files in other folders)
