
## Process this file with automake to produce Makefile.in

AUTOMAKE_OPTIONS = 1.4 foreign

# A list of all the files in the current directory which can be regenerated
MAINTAINERCLEANFILES = 

CLEANFILES       = Makefile.am.timestamp 

SUBDIRS          = rmi @modules@

EXTRA_DIST = build_modules.sh Makefile.am.stub
	  
