
feincludes_DATA = \
       fcompile.h fstring.h fdebug.h \
      ffunction.h \
       fglobals.h \
           fmem.h \
           foop.h \
        fopcode.h \
           fops.h \
        fparser.h \
       fprofile.h \
           freq.h \
         fstack.h \
       fstructs.h \
         futils.h \
			farray.h \
	    fgc.h \
	  fhash.h \
	fmodule.h \
         fregex.h \
         ferror.h \
	    fns.h \
     fvariables.h \
	 fbuffer.h \
	 fthread.h \
	 fobj.h \
      fmem_jedi.h \
      famt.h \
      fmem_libgc.h \
      fcache.h \
	fcontainer.h

feincludesdir = $(prefix)/include/ferite

EXTRA_DIST = $(feincludes_DATA)
